# swarm

./: .env.example  .gitignore  CLAUDE.md  DOCKER_BUILD.md  README.md  anthropic_errors_plan.txt  change.txt  claude-runner.Dockerfile  docker-compose.yml  entrypoint.sh  github_oauth_plan.txt  gradient.html  notes.md  psql.sh  render.yaml  run.md  show_hn.txt  test_daytona_integration.md  todo.md  vercel.json
backend/: .env.example  Cargo.toml  build.rs
backend/.sqlx/: query-01762f68e56dade80dae2cddc44ae77daa041b2637a19e1cbbb205728a86aecd.json  query-0215539d893bb15c44a20e6753f57c3d6bed3d569e0cacdba0010fd9b3f877cb.json  query-04fd188d30133750bf86558cedfb8660ac651153708962c3511048afb2415102.json  query-07ef1edd4641bd4d5c84a5077b5d26e917dfd1570e298527ae8d8acb6429edc8.json  query-089de85e787bda3270e19dbe09ed4ebe6f09d8cd29a25e56c2e3084f40c1e75a.json  query-0ac0712238e8af2fff251f2f6358e616799d072f72e504467b039a6dafd341e6.json  query-0c46a664ab3a77dcfd0f3ddb6bc4faa6d89e68507814ba8a88855d98ccc28539.json  query-0e11799a1441daf3b4f133b68964bffe51b9a1a3bcfba7f1c136f59119e62952.json  query-0e7dd4aac86444c607ce3850a5495ddb4dc19b031608fc58ae78efd46aabd06e.json  query-108ab849b6067ea87e2af42e94fb59d625050ec843a0a1eb9674860057df0c25.json  query-1115e73c6bb3350a60dc12b5346be87ba8386280edf5be0d7dab6d1f6ddd2372.json  query-148068b8cc07672c1a96f85456e822b679f522c25f720618adb254b39d71e693.json  query-174aa7cf8588e9530ddbcc647871db99749f0ea6d500069b6c0df9f511695c0d.json  query-1d6d0ab437c3f7320230499347be02f51a7858b0e8ad196276ebd4cc3328d01f.json  query-1e9b5c3d91b6dd3e41f84e2b535a960147ae9732e9def08dfed233495e5cd754.json  query-21186c15b2123b36833a032f6246949e90f2220a873e8767f2a37a344beb9b15.json  query-21752de05934791730e55e232970da36c9386e722d9498f1098c03d33d476406.json  query-2276bd11945201dfcf5f9b3897935f189f63b6cfcd65c0ae3fca072e0d73d203.json  query-232be79d72ac1740db78429e6b31a5bd3d1e4850b2331b6202d532c89cfc4534.json  query-2380f6d98e885c199359988857e4808a0275bd42ef9c365495af9b96c2be967b.json  query-244db14d1b2c85d0984f5ba2f3a87ba6075332e9405ed4d89327e8d6fcb27f1d.json  query-249ef6a1437b564b5c33822a3a0c3606df8bf9122427066627a2c8ca11a8c163.json  query-25468ecebf05a25eca77c280d44d701d844126a26976d460530732720ce76faa.json  query-25e8da3c10e494f97b3ee8172927c1bfd61cc64ad7c2f6a67cd453e14bbc1b5e.json  query-26557fe97596d9876a8a03bb9582d5fbe8b998aef834344cc84f85d154c484e5.json  query-27008ea83f015859da6b5e4c869fbc919d45248a0bc5a785a375bfceb0538681.json  query-27f645d1c33e8f2804dbf708363cc1419c47adad6f13e8eadc5fd67022109124.json  query-295b3c568a092d7d27a9bf252ceb83421b0370da2a2b8929240ca37eff957cb9.json  query-2e9557d1ce3edbc96affe40144ec46870201f874d41bae43c7d35f623087583c.json  query-329cc234542b995d0562d25c02ad5eda1d851ea1c0003392be949379573aa893.json  query-3740dc041ce694b09f584a15d71e8842be41831647a2db25ec63688867ae48b2.json  query-396e39dc3d21b5e41a73aa5c71c2a2a683c6f6731cd2cf93d51b8504782262c3.json  query-39d55d6a514d9709b25c2f3a2f44df8f642a6026d66424240631418fc65aa377.json  query-3d2c507ef788ef9d0dfbb9e7531028254cec8ce377f8759b406a708caebb4968.json  query-3db470f3a0c425507337f7729196dfb386f0a3bc357cb3eb608cf60acbb075b3.json  query-424bee6dce3be455c255f8c976b29cfed3b351bf1e406315483bdfa1c370dc81.json  query-427f59cca15785185b8ec5593bae611532adc5000e7167f8972b36f5673e796c.json  query-436a34f1644df871fe4edc3e4cbf979ad943894c95524a227eaf9a1c4d246a39.json  query-45df40953ed2324b554aa076bcbc72e82af7e8c36a511ae834466508acee960b.json  query-469a4519601d5198fdf6a7af4be5a2491da1b931fbc6ddaec24c950a8dba90a3.json  (+79 more)
backend/bindings/: AgentTodo.ts  RepositoryTS.ts  RepositoryWithTasks.ts  Run.ts  Task.ts  TaskDetails.ts  TaskLog.ts  TaskLogsPaginated.ts  TaskWithRun.ts  User.ts  UserWithDefaultRepo.ts
backend/migrations/: 001_initial_schema.sql  002_add_daytona_workspace_columns.sql  002_add_sandbox_hostname.sql  003_add_anthropic_api_key.sql  003_create_runs.sql  004_add_daytona_command_columns.sql  004_add_unique_constraint_runs_task_id.sql  004_remove_anthropic_api_key.sql  004_remove_pr_fields_from_runs.sql  005_create_task_logs.sql  005_remove_obsolete_task_columns.sql  005_rename_daytona_columns.sql  006_add_last_fetched_at_to_repositories.sql  006_add_mode_and_comments.sql  007_add_github_branch.sql  007_rename_comments_to_messages.sql  008_add_commit_and_pr_fields.sql  008_move_description_to_messages.sql  009_add_messages_metadata.sql  009_agent_todos.sql  010_add_message_id_to_runs.sql  011_make_messages_run_id_nullable.sql  012_allow_multiple_completed_runs.sql  013_add_run_id_to_task_logs.sql  014_add_final_message_md.sql  015_add_onboarding_and_api_keys.sql  016_add_github_pushed_at.sql  017_add_is_archived_to_tasks.sql  018_add_idle_timeout_to_runs.sql  019_add_model_to_runs.sql  020_drop_task_id_from_agent_todos.sql  021_add_pr_merged_at_to_tasks.sql  022_consolidate_plan_review_to_chat.sql  023_add_updated_at_to_messages.sql  024_fix_messages_unique_constraint.sql  025_add_pr_closed_at_to_tasks.sql  025_add_user_access_tokens.sql  026_add_user_access_tokens.sql  20250725_allow_multiple_completed_runs.sql
backend/scripts/: mark_existing_users_complete.sql  package-lock.json  package.json  run_daytona.sh  run_daytona_task.ts  run_e2b.sh  run_e2b_task.ts  start_postgres_and_migrate.sh  tail_task_output.sh
backend/sql/: archive_multiple_tasks.sql  archive_multiple_tasks_with_branch_info.sql  archive_task.sql  archive_task_with_branch_info.sql  create_or_update_github_token.sql  create_repository.sql  create_task.sql  create_user.sql  get_agent_todos_for_user.sql  get_github_token.sql  get_repository_by_id.sql  get_user_by_clerk_id.sql  get_user_repositories.sql  get_user_runs_latest.sql  get_user_tasks.sql  set_default_repository.sql  sync_run_from_task.sql  update_task_branch.sql  update_task_command_ids.sql  (+6 more)
cli/: README.md  pyproject.toml
modal/: .env.example  modal_image.py  prompts.py  pyproject.toml  requirements.txt  run_shim.py  run_tests.py  shim.py
sandbox/: .gitignore  pyproject.toml
(+302 files in other folders)
