[package]
name = "swarm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
ts-rs = { version = "10", features = ["chrono-impl"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
octocrab = "0.40"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
http = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-retry = "0.3"
async-trait = "0.1"
url = "2.5"
shell-escape = "0.1"
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
anyhow = "1"
ring = "0.17"
once_cell = "1.21"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
mockito = "1.0"
