[project]
name = "swarm-cli"
version = "0.1.0"
description = "Swarm: branch-first Claude Code (local worktrees)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
]

[project.scripts]
swarm = "swarm.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm"]