[project]
name = "swarm-modal"
version = "0.1.0"
description = "Modal sandbox environment for Swarm AI agent execution"
requires-python = ">=3.11"
dependencies = [
    "modal==1.0.5",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic[email]",
    "httpx",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"