[project]
name = "swarm-sandbox"
version = "0.1.0"
description = "Modal sandbox environment for Swarm AI agent execution"
requires-python = ">=3.11"
dependencies = [
    "modal==1.0.5",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic[email]",
    "httpx",
    "pytest",
]

[project.optional-dependencies]
dev = ["black"]

[project.scripts]
swarm-sandbox = "sandbox.run_shim:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox"]


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs | \.git | \.hg | \.mypy_cache | \.tox | \.venv | _build | build | dist
)/
'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"