[package]
name = "swarm"
version = "0.1.0"
description = "A Tauri-based desktop app for chatting with GPT-5 about code files"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tiktoken-rs = "0.5"
once_cell = "1"
anyhow = "1"
ignore = "0.4"
directories = "5"
futures = "0.3"
eventsource-stream = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
tokio-util = "0.7.16"
env_logger = "0.11.8"
log = "0.4.27"
num_cpus = "1.16"
rayon = "1.10"
parking_lot = "0.12"
lru = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
